# order-service

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml  tollgate.yaml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_tombstone_table.py  003_add_order_read_view.py
app/: config.py  database.py  main.py  models.py
app/api/: orders.py
app/db/: tables.py
app/kafka/: consumer.py  producer.py
app/models/: events.py  orders.py
app/service/: order_service.py  saga.py
tests/: conftest.py  test_api.py  test_consumer.py  test_models.py  test_producer.py  test_saga.py
