[tool.poetry]
name = "order-service"
version = "1.4.0"
description = "A FastAPI project template managed with Poetry"
authors = ["Your Name <you@example.com>"]
license = ""
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = "^2.0.48"
psycopg2-binary = "^2.9.11"
pydantic-settings = "^2.13.1"
aiokafka = "^0.13.0"
alembic = "^1.15.0"
auth-lib-python = { git = "https://github.com/DLS-soft2/auth-lib-python", tag = "1.0.0" }
prometheus-fastapi-instrumentator = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "pytest-asyncio (>=0.25.0)",
]

[tool.pylint."messages_control"]
disable = ["too-few-public-methods"]
good-names = ["db"]

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
